[gd_scene load_steps=4 format=3 uid="uid://c86cvih5rm5og"]

[ext_resource type="Script" path="res://pas.gd" id="1_ej1ow"]
[ext_resource type="Texture2D" uid="uid://bonaym4klk588" path="res://icon.svg" id="2_jubjc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oj147"]

[node name="pas" type="StaticBody2D"]
script = ExtResource("1_ej1ow")

[node name="oDolu" type="Sprite2D" parent="."]
scale = Vector2(0.421875, 2.44531)
texture = ExtResource("2_jubjc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_oj147")

[node name="oNahoru" type="Sprite2D" parent="."]
position = Vector2(37, 60)
rotation = 3.14159
scale = Vector2(0.574219, 2.40234)
texture = ExtResource("2_jubjc")

[node name="oDoprava" type="Sprite2D" parent="."]
position = Vector2(159, 4)
rotation = 4.71239
scale = Vector2(0.390625, 2.85156)
texture = ExtResource("2_jubjc")
